--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,12 @@
         </activity>
         <activity android:name=".DualScreenMainActivity"
             android:screenOrientation="portrait">
-
         </activity>
+        <activity android:name=".ComposeEmailFragment"
+            android:screenOrientation="portrait">
+        </activity>
+
+
     </application>
 
 </manifest>
