--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,14 @@
         <activity android:name=".ComposeEmailFragment"
             android:screenOrientation="portrait">
         </activity>
+        <activity android:name=".EmailAuthorizationFragment"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".EnableProtectionFragment"
+            android:screenOrientation="portrait">
+        </activity>
+
+
 
 
     </application>
