--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.emartin.beakproject">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -28,10 +30,6 @@
         <activity android:name=".EnableProtectionFragment"
             android:screenOrientation="portrait">
         </activity>
-
-
-
-
     </application>
 
 </manifest>
